Fix turquoise potion clipping

--- a/web/css/index.css
+++ b/web/css/index.css
@@ -151,8 +151,8 @@ th, td {
 	image-rendering: pixelated;
 
 	position: absolute;
-	top: 0.4rem;
-	right: 0.1rem;
+	top: 0.3rem;
+	right: 0.25rem;
 	width: 8px;
 	height: 8px;
 	scale: 2;
